# bbb-votes

./: .env  Dockerfile  Makefile  README.md  docker-compose.yml  init.sql  locustfile.py  pyproject.toml
bbb/: api.py  core.py  db.py  vote_processor.py
tests/: test_core.py
