[tool.poetry]
name = "bbb-votes"
version = "0.1.0"
description = ""
authors = ["Vinicius Agostini"]

[tool.poetry.dependencies]
python = "^3.9"
faust-streaming = "^0.8.4"
fastapi = "^0.75.2"
uvicorn = "^0.17.6"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
isort = "^5.10.1"
locust = "2.8.3"

[tool.black]
line-length = 100

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
