[tool.poetry]
name = "bbb-votes"
version = "0.1.0"
description = "Sistema para contabilizar votos do BBB"
authors = ["Vinicius Agostini"]

[tool.poetry.dependencies]
python = "^3.10"
faust-streaming = "^0.9.4"
fastapi = "^0.87.0"
uvicorn = "^0.19.0"
psycopg2-binary = "^2.9.5"
sqlalchemy = "^1.4.44"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
isort = "^5.10.1"
locust = "^2.13.0"

[tool.black]
line-length = 100

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
